<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.here.notice.NoticeActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:paddingBottom="7dp"
        android:elevation="7dp"
        android:id="@+id/tb_notice"
        android:background="@color/theme_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">
        <TextView
            android:textColor="@color/share_text"
            android:layout_gravity="center"
            android:textSize="@dimen/tool_bar_title"
            android:text="@string/message_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:textColor="@color/share_text"
            android:text="@string/voice"
            android:layout_marginLeft="@dimen/setting_margin_left"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ch.ielse.view.SwitchView
            android:id="@+id/sv_voice"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/setting_margin_left"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="32dp" />
    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/setting_margin_left"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/part_linear_color"/>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:textColor="@color/share_text"
            android:text="@string/shock"
            android:layout_marginLeft="@dimen/setting_margin_left"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ch.ielse.view.SwitchView
            android:id="@+id/sv_vibration"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/setting_margin_left"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="32dp" />
    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/setting_margin_left"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/part_linear_color"/>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:textColor="@color/share_text"
            android:text="@string/notice_show_content"
            android:layout_marginLeft="@dimen/setting_margin_left"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ch.ielse.view.SwitchView
            android:id="@+id/sv_notice_show"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/setting_margin_left"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="32dp" />
    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/setting_margin_left"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/part_linear_color"/>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:textColor="@color/share_text"
            android:text="@string/notice_show_lamp"
            android:layout_marginLeft="@dimen/setting_margin_left"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ch.ielse.view.SwitchView
            android:id="@+id/sv_indicator"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/setting_margin_left"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="32dp" />
    </RelativeLayout>

    <View
        android:layout_marginLeft="@dimen/setting_margin_left"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/part_linear_color"/>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:textColor="@color/share_text"
            android:text="@string/exit_progress"
            android:layout_marginLeft="@dimen/setting_margin_left"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ch.ielse.view.SwitchView
            android:id="@+id/sv_exit_receive"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/setting_margin_left"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="32dp" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/part_linear_color"/>



</LinearLayout>
