<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.here.phone.PhoneActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:paddingBottom="7dp"
        android:elevation="7dp"
        android:id="@+id/tb_phone"
        android:background="@color/theme_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height" >
        <TextView
            android:textColor="@color/share_text"
            android:layout_gravity="center"
            android:textSize="@dimen/tool_bar_title"
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height">
        <TextView
            android:text="@string/phone_number"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/phone_margin_left"
            android:textColor="@color/share_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_number"
            android:layout_marginRight="@dimen/phone_margin_left"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:background="@color/part_linear_color"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <Button
        android:id="@+id/btn_update_phone"
        android:textColor="@color/white"
        android:text="@string/update_phone"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="@dimen/phone_margin_left"
        android:layout_marginRight="@dimen/phone_margin_left"
        android:background="@drawable/button_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <TextView
        android:layout_marginTop="@dimen/phone_margin_left"
        android:layout_marginLeft="@dimen/phone_margin_left"
        android:text="@string/update_phone_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
